# marketplace-datak

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
services/b2b/: .env.example  Dockerfile  config.py  main.py  pyproject.toml
services/b2b/api/: categories.py  products.py  sku.py
services/b2b/core/: config.py
services/b2b/crud/: category.py  product.py  sku.py
services/b2b/database/: core.py
services/b2b/database/alembic/: env.py
services/b2b/database/alembic/versions/: 3ed06920443b_init_b2b.py
services/b2b/database/models/catalog/: base.py  inventory.py  variants.py
services/b2b/exceptions/: category.py  product.py  sku.py
services/b2b/schemas/: category.py  product.py  sku.py
services/b2b/services/: category_service.py  product_service.py  sku.py
services/b2c/: .env.example  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
services/b2c/api/: breadcrumbs.py  cart.py  catalog.py  category.py  product.py
services/b2c/core/: config.py  db.py
services/b2c/crud/: cart.py  category.py  product.py  sku.py
services/b2c/database/alembic/: env.py
services/b2c/database/alembic/versions/: e33711a72be9_.py  e35095731aef_init.py  e7717e5be6ce_.py
services/b2c/database/models/: __init__.py
services/b2c/database/models/cart/: item.py
services/b2c/database/models/catalog/: base.py  variants.py
services/b2c/database/models/identity/: user.py
services/b2c/database/models/personal/: profile.py
services/b2c/database/models/storefront/: main.py
services/b2c/exceptions/: cart.py  category.py  database.py
services/b2c/schemas/: cart.py  category.py  characteristic.py  image.py  product.py  sku.py
services/b2c/scripts/: category_parser.py  seed.py  taxonomy-with-ids.ru-RU.xlsx
services/b2c/services/: cart_service.py  category_service.py  product_service.py  sku_service.py
services/moderation/: main.py  pyproject.toml
shared/: config.py  pyproject.toml
shared/database/: alembic.ini  core.py
shared/database/migrations/: env.py
shared/database/migrations/versions/: 7421b1e397e0_initial.py
shared/database/models/: __init__.py
shared/database/models/cart/: item.py
shared/database/models/catalog/: base.py  inventory.py  variants.py
shared/database/models/identity/: user.py
shared/database/models/personal/: profile.py
shared/database/models/storefront/: main.py
