[project]
name = "marketplace-datak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = [ "services/*" ]

# b2b = "uvicorn --project services.b2b.main:app --reload" 

[tool.ruff]
lint.extend-select = [
    "FAST",
    "ANN",
    "S",
    "BLE",
    "B",
    "C4",
    "FIX",
    "LOG",
    "Q",
    "ARG",
    "PTH",
    "N",
]

[tool.ruff.format]
quote-style =  "double"
indent-style = "tab"

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
