[project]
name = "marketplace-datak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.44.0",
]

#[tool.uv.workspace]
#members = ["services/*", "shared"]
## b2b = "uvicorn --project services.b2b.main:app --reload"
#
#[tool.uv.sources]
#shared = { workspace = true }

[tool.ruff]
lint.extend-select = [
    "FAST",
    "ANN",
    "S",
    "BLE",
    "B",
    "C4",
    "FIX",
    "LOG",
    "Q",
    "ARG",
    "PTH",
    "N",
]

[tool.ruff.format]
quote-style =  "double"
indent-style = "tab"

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
