[project]
name = "b2c"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "alembic",
    "pydantic-settings",
    "sqlalchemy",
    "python-dotenv",
    "psycopg2-binary",
    "asyncpg",
    "pydantic>=2.12.5",
]

[tool.ruff]
lint.extend-select = [
    "FAST",
    "ANN",
    "S",
    "BLE",
    "B",
    "C4",
    "FIX",
    "LOG",
    "Q",
    "ARG",
    "PTH",
    "N",
]

[tool.ruff.format]
quote-style =  "double"
indent-style = "tab"

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
